# INILib

./: CMakeLists.txt  README.md
INILib/: CMakeLists.txt
INILib/example_files/: example.ini  out.ini
INILib/inc/: INILib.hpp  INITokenizer.hpp
INILib/src/: INILib.cpp
INILib/test/: test.cpp
